# Proyecto-I-Datos-II

./: .ninja_deps  .ninja_log  CMakeLists.txt  Doxyfile  build.ninja  cmake_install.cmake  main.cpp  structure.txt
MPOINTERS1/: .ninja_deps  .ninja_log  CMakeCache.txt  CMakeLists.txt  build.ninja  cmake_install.cmake  structure.txt
MPOINTERS1/html/: _c_make_files_23_831_85_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  _c_make_files_23_831_85_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.js  _list_test_8cpp.html  _list_test_8cpp.js  _list_test_8cpp__incl.md5  _m_pointer_8cpp.html  _m_pointer_8cpp.js  _m_pointer_8h.html  _m_pointer_8h__dep__incl.map  _m_pointer_8h__dep__incl.md5  _m_pointer_8h__incl.map  _memory_manager_8cpp.html  _memory_manager_8cpp.js  _memory_manager_8cpp__incl.map  _memory_manager_8cpp__incl.md5  _memory_manager_8h__dep__incl.map  _memory_manager_8h__incl.map  annotated.html  class_m_pointer.js  class_m_pointer__inherit__graph.map  class_memory_manager-members.html  class_memory_manager.js  class_memory_manager__coll__graph.map  cmake-build-debug_2_c_make_files_23_830_85_2_compiler_id_c_2_c_make_c_compiler_id_8c.js  cmake-build-debug_2_c_make_files_23_830_85_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.html  dir_000013_000010.html  dir_017ad5e908c41501f6a06b5119b37293.html  dir_075bb3ff235063c77951cd176d15a741.html  dir_075bb3ff235063c77951cd176d15a741.js  dir_075bb3ff235063c77951cd176d15a741_dep.map  dir_120ed4da3e3217b1e7fc0b4f48568e79.js  dir_1659819cd7e3f20e7f6badbf79438dcd.html  dir_1659819cd7e3f20e7f6badbf79438dcd_dep.map  dir_5009d7f7072ece5f2b1b3d0fa0a90baa_dep.map  dir_6908ff505388a07996d238c763adbdab.html  dir_6908ff505388a07996d238c763adbdab.js  dir_6908ff505388a07996d238c763adbdab_dep.map  dir_92b43f68c77dace9717b177d7efaeb9a.html  dir_d44c64559bbebec7f509842c48db8b23.js  dir_f2e3570aa1ea56ce773b41956822153b.js  (+14 more)
MPOINTERS1/html/search/: all_0.js  all_1.js  all_4.js  all_5.js  all_8.js  all_b.js  all_c.js  classes_0.js  defines_1.js  defines_3.js  defines_4.js  files_0.js  functions_0.js  functions_7.js  functions_9.js  searchdata.js  variables_1.js
MPOINTERS1/include/: MPointer.h  MemoryManager.h  MemoryServer.h
MPOINTERS1/latex/: _c_make_files_23_831_85_2_compiler_id_c_2_c_make_c_compiler_id_8c.tex  _c_make_files_23_831_85_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.tex  _list_test_8cpp.tex  _list_test_8cpp__incl.md5  _m_pointer_8cpp.tex  _m_pointer_8cpp__incl.md5  _m_pointer_8h__dep__incl.md5  _m_pointer_8h_source.tex  _memory_manager_8cpp__incl.md5  _memory_manager_8h.tex  _memory_manager_8h_source.tex  class_m_pointer.tex  class_m_pointer__inherit__graph.md5  class_memory_manager.tex  class_memory_manager__coll__graph.md5  client_2main_8cpp__incl.md5  cmake-build-debug_2_c_make_files_23_830_85_2_compiler_id_c_x_x_2_c_make_c_x_x_compiler_id_8cpp.tex  dir_120ed4da3e3217b1e7fc0b4f48568e79_dep.md5  dir_1659819cd7e3f20e7f6badbf79438dcd.tex  dir_f89abcb304c928c7d889aa5625570de5.tex  files.tex  struct_node.tex
MPOINTERS1/src/client/: MPointer.cpp  MPointer.h  main.cpp
MPOINTERS1/src/server/: MemoryManager.cpp  MemoryServer.cpp  main.cpp
MPOINTERS1/src/test/: ListTest.cpp
html/: _c_make_files_23_831_85_2_compiler_id_c_2_c_make_c_compiler_id_8c.html  _c_make_files_23_831_85_2_compiler_id_c_2_c_make_c_compiler_id_8c.js  _list_test_8cpp__incl.map  _m_pointer_8cpp__incl.map  _m_pointer_8cpp__incl.md5  _m_pointer_8h.js  _m_pointer_8h__incl.md5  _m_pointer_8h_source.html  (+49 more)
(+53 files in other folders)
